--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,102 +1,29 @@
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
+{% extends 'base.html' %}
+{% load static %}
 
-<!-- 
-THEME: Phantom - Bootstrap Portfolio Template
-VERSION: 1.0.0
-AUTHOR: Themefisher
+{% block content %}
 
-HOMEPAGE: https://themefisher.com/products/phantom-best-bootstrap-portfolio-template/
-DEMO: https://demo.themefisher.com/phantom/
-GITHUB: https://github.com/themefisher/Phantom-Bootstrap-Portfolio-Template
 
-WEBSITE: https://themefisher.com
-TWITTER: https://twitter.com/themefisher
-FACEBOOK: https://www.facebook.com/themefisher
--->
-
-<!DOCTYPE html>
-<html lang="zxx">
-<head>
-
-  <!-- ** Basic Page Needs ** -->
-  <meta charset="utf-8">
-  <title>Phantom - Bootstrap Portfolio Template</title>
-
-  <!-- ** Mobile Specific Metas ** -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Portfolio HTML Template">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="Themefisher">
-  <meta name="generator" content="Themefisher Html5 Portfolio Template v1.0">
-
-  <!-- Essential Stylesheets -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sans:400,600,700,800">
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/animate.css">
-  <link rel="stylesheet" href="plugins/slick/slick.css">
-  <link rel="stylesheet" href="plugins/slick/slick-theme.css">
-  <link rel="stylesheet" href="plugins/themefisher-fonts/css/themefisher-fonts.min.css">  
-
-  <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="css/style.css">
-  
-  <!-- Theme Stylesheet -->
-  <link rel="stylesheet" href="#" id="color-changer">
-  
-  <!--Favicon-->
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
-
-</head>
-<body><!-- set class="dark" on body tag for DARK-THEME -->
-
-  <div class="preloader">
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-  </div>
-
-  <div class="preview-wrapper">
-    <div class="switcher-head">
-      <span>Style Switcher</span>
-      <div class="switcher-trigger tf-tools"></div>
-    </div>
-
-    <div class="switcher-body">
-      <h4>Choose Color:</h4>
-      <ul class="color-options list-none">
-        <li class="c0" data-color="red" title="Default">Default</li>
-        <li class="c1" data-color="blue" title="Red">Red</li>
-        <li class="c2" data-color="green" title="Green">Green</li>
-        <li class="c3" data-color="yellow" title="Blue">Blue</li>
-      </ul>
-    </div>
-  </div>
 
 <main class="site-wrapper">
   <div class="pt-table">
     <div class="pt-tablecell page-welcome relative">
       <!-- .close -->
-      <a href="./" class="page-close"><i class="tf-ion-close"></i></a>
+      <a href="{% url 'app:home' %}" class="page-close"><i class="tf-ion-close"></i></a>
       <!-- /.close -->
 
       <div class="author-image-large">
-        <img src="images/author.png" alt="">
+        <img src="/static/images/me.png" alt="">
       </div>
 
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-7">
             <div class="page-title">
-              <h2>David <span class="primary">ramon</span> <span class="title-bg">About</span></h2>
-              <p>A product designer from England, who focuses on interactive design & A freelance designer focusing on typography & clean interfaces. Also works in dignissimos non quos Google..</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores repellendus corporis, tenetur inventore perferendis reprehenderit autem dignissimos non quos unde eveniet sapiente necessitatibus consequuntur ea ab dolore.</p>
+              <h2>Abdulla <span class="primary">Abdukulov</span> <span class="title-bg">About</span></h2>
+              <p>I am a seasoned Backend Developer with extensive experience in developing and maintaining complex systems. Originally from Uzbekistan, I have worked on various projects both as a full-time employee and as a freelance developer.</p>
+              <p>With a strong background in RESTful API design and database management, I have a deep understanding of the inner workings of web applications and how to design scalable and efficient systems.
+                My expertise in programming language such as Python allows me to bring new ideas to the table and create innovative solutions to meet the needs of each project.</p>
             </div>
           </div>
         </div> <!-- /.row -->
@@ -105,9 +32,9 @@ FACEBOOK: https://www.facebook.com/themefisher
       <nav class="page-nav clear">
   <div class="container">
     <div class="flex flex-middle space-between">
-      <span class="prev-page"><a href="index.html" class="link">&larr; Prev Page</a></span>
-      <span class="copyright">Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>.</span>
-      <span class="next-page"><a href="about.html" class="link">Next Page &rarr;</a></span>
+      <span class="prev-page"><a href="{% url 'app:home' %}" class="link">&larr; Prev Page</a></span>
+      <span class="copyright">Copyright &copy; 2023, Designed &amp; Developed by <a href="https://t.me/abdukulov">@abdukulov</a>.</span>
+      <span class="next-page"><a href="{% url 'app:about' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
   <!-- /.page-nav -->
@@ -118,17 +45,4 @@ FACEBOOK: https://www.facebook.com/themefisher
   </div> <!-- /.pt-table -->
 </main> <!-- /.site-wrapper -->
 
-
-<!-- 
-Essential Scripts
-=====================================-->
-<script src="plugins/jquery-2.2.4.min.js"></script>
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
-<script src="plugins/jquery.nicescroll.min.js"></script>
-<script src="plugins/isotope/isotope.pkgd.min.js"></script>
-<script src="plugins/slick/slick.min.js"></script>
-
-<script src="js/script.js"></script>
-
-</body>
-</html>
+{% endblock content %}
