--- a/templates/about.html
+++ b/templates/about.html
@@ -43,44 +43,34 @@
             <div class="skill-wrapper">
               <div class="progress clear">
                 <div class="skill-name">Photoshop</div>
-                <div class="skill-bar">
-                  <div class="bar"></div>
-                </div>
               </div> <!-- /.progress -->
               <div class="progress clear">
-                <div class="skill-name">Illustrator</div>
-                <div class="skill-bar">
-                  <div class="bar"></div>
-                </div>
-                <div class="skill-lavel" data-skill-value="78%"></div>
+                <div class="skill-name">Photoshop</div>
               </div> <!-- /.progress -->
               <div class="progress clear">
-                <div class="skill-name">After Fffects</div>
-                <div class="skill-bar">
-                  <div class="bar"></div>
-                </div>
-                <div class="skill-lavel" data-skill-value="85%"></div>
+                <div class="skill-name">Photoshop</div>
               </div> <!-- /.progress -->
               <div class="progress clear">
-                <div class="skill-name">HTML5</div>
-                <div class="skill-bar">
-                  <div class="bar"></div>
-                </div>
-                <div class="skill-lavel" data-skill-value="95%"></div>
+                <div class="skill-name">Photoshop</div>
               </div> <!-- /.progress -->
               <div class="progress clear">
-                <div class="skill-name">WordPress</div>
-                <div class="skill-bar">
-                  <div class="bar"></div>
-                </div>
-                <div class="skill-lavel" data-skill-value="70%"></div>
+                <div class="skill-name">Photoshop</div>
               </div> <!-- /.progress -->
               <div class="progress clear">
-                <div class="skill-name">jQuery</div>
+                <div class="skill-name">Photoshop</div>
+              </div> <!-- /.progress -->
+              <div class="progress clear">
+                <div class="skill-name">Photoshop</div>
                 <div class="skill-bar">
-                  <div class="bar"></div>
-                </div>
-                <div class="skill-lavel" data-skill-value="75%"></div>
+              </div> <!-- /.progress -->
+              <div class="progress clear">
+                <div class="skill-name">Photoshop</div>
+              </div> <!-- /.progress -->
+              <div class="progress clear">
+                <div class="skill-name">Photoshop</div>
+              </div> <!-- /.progress -->
+              <div class="progress clear">
+                <div class="skill-name">Photoshop</div>
               </div> <!-- /.progress -->
             </div> <!-- /.skill-wrapper -->
           </div> <!-- /.col -->
