--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,3 @@
-/**
- * WEBSITE: https://themefisher.com
- * TWITTER: https://twitter.com/themefisher
- * FACEBOOK: https://www.facebook.com/themefisher
- * GITHUB: https://github.com/themefisher/
- */
-
 /*------------------------------------------------
 	Base Styles
 -------------------------------------------------*/
@@ -519,12 +512,12 @@ label {
 .progress {
   background-color: #1e2530;
   border-radius: 2px;
-  height: auto;
   min-height: 45px;
   -moz-align-items: center;
   align-items: center;
   display: -moz-flex;
-  display: flex;
+  display: inline-flex;
+  width: 160px;
 }
 .progress > div {
   color: #fff;
