upated templates and views

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="services.html" class="hex-content">
+                <a href="{% url 'app:services' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-tools-2"></i>
@@ -101,7 +101,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="resume.html" class="hex-content">
+                <a href="{% url 'app:resume' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-tools"></i>
@@ -125,7 +125,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="works.html" class="hex-content">
+                <a href="{% url 'app:works' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-briefcase2"></i>
@@ -149,7 +149,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="testimonials.html" class="hex-content">
+                <a href="{% url 'app:testimonials' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-chat"></i>
@@ -173,7 +173,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="contact.html" class="hex-content">
+                <a href="{% url 'app:contact' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-envelope2"></i>
