--- a/templates/about.html
+++ b/templates/about.html
@@ -40,37 +40,12 @@
             <div class="section-title clear">
               <h3>Skills</h3>
             </div>
-            <div class="skill-wrapper">
+              <div class="skill-wrapper">
+                {% for skill in skills %}
               <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
+                <div class="skill-name">{{ skill.name }}</div>
               </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
-                <div class="skill-bar">
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Photoshop</div>
+                {% endfor %}
               </div> <!-- /.progress -->
             </div> <!-- /.skill-wrapper -->
           </div> <!-- /.col -->
