--- a/templates/services.html
+++ b/templates/services.html
@@ -1,95 +1,18 @@
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
+{% extends 'base.html' %}
+{% load static %}
 
-<!-- 
-THEME: Phantom - Bootstrap Portfolio Template
-VERSION: 1.0.0
-AUTHOR: Themefisher
-
-HOMEPAGE: https://themefisher.com/products/phantom-best-bootstrap-portfolio-template/
-DEMO: https://demo.themefisher.com/phantom/
-GITHUB: https://github.com/themefisher/Phantom-Bootstrap-Portfolio-Template
-
-WEBSITE: https://themefisher.com
-TWITTER: https://twitter.com/themefisher
-FACEBOOK: https://www.facebook.com/themefisher
--->
-
-<!DOCTYPE html>
-<html lang="zxx">
-<head>
-
-  <!-- ** Basic Page Needs ** -->
-  <meta charset="utf-8">
-  <title>Phantom - Bootstrap Portfolio Template</title>
-
-  <!-- ** Mobile Specific Metas ** -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Portfolio HTML Template">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="Themefisher">
-  <meta name="generator" content="Themefisher Html5 Portfolio Template v1.0">
-
-  <!-- Essential Stylesheets -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sans:400,600,700,800">
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/animate.css">
-  <link rel="stylesheet" href="plugins/slick/slick.css">
-  <link rel="stylesheet" href="plugins/slick/slick-theme.css">
-  <link rel="stylesheet" href="plugins/themefisher-fonts/css/themefisher-fonts.min.css">  
-
-  <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="css/style.css">
-  
-  <!-- Theme Stylesheet -->
-  <link rel="stylesheet" href="#" id="color-changer">
-  
-  <!--Favicon-->
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
-
-</head>
-<body><!-- set class="dark" on body tag for DARK-THEME -->
-
-  <div class="preloader">
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-  </div>
-
-  <div class="preview-wrapper">
-    <div class="switcher-head">
-      <span>Style Switcher</span>
-      <div class="switcher-trigger tf-tools"></div>
-    </div>
-
-    <div class="switcher-body">
-      <h4>Choose Color:</h4>
-      <ul class="color-options list-none">
-        <li class="c0" data-color="red" title="Default">Default</li>
-        <li class="c1" data-color="blue" title="Red">Red</li>
-        <li class="c2" data-color="green" title="Green">Green</li>
-        <li class="c3" data-color="yellow" title="Blue">Blue</li>
-      </ul>
-    </div>
-  </div>
+{% block content %}
 
 <section class="site-wrapper">
   <div class="pt-table">
     <div class="pt-tablecell page-services relative">
-      <a href="./" class="page-close"><i class="tf-ion-close"></i></a>
+      <a href="'{% url 'app:home' %}" class="page-close"><i class="tf-ion-close"></i></a>
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-lg-offset-1 col-lg-10">
             <div class="page-title text-center">
               <h2>Awesome <span class="primary">Services</span> <span class="title-bg">Services</span></h2>
-              <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est
-                notare quam littera gothica,quam nunc putamus parum claram anteposuerit.</p>
+              <p>Expert in delivering outstanding web app and REST API solutions for improved scalability, security, and performance.</p>
             </div>
 
             <div class="hexagon-menu services clear">
@@ -107,8 +30,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div class="icon">
                     <i class="et-line icon-lightbulb"></i>
                   </div>
-                  <h4>Creative <br> Design</h4>
-                  <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consue.</p>
+                  <h4>Web Application <br> Development</h4>
+                  <p>Scalability, security, and high performance.</p>
                 </div>
               </div>
               <div class="service-hex">
@@ -125,8 +48,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div class="icon">
                     <i class="et-line icon-mobile"></i>
                   </div>
-                  <h4>Responsive <br> Layout</h4>
-                  <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consue.</p>
+                  <h4>REST API <br> Development</h4>
+                  <p>Seamless front-end and <br> back-end communication.</p>
                 </div>
               </div>
               <div class="service-hex">
@@ -143,8 +66,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div class="icon">
                     <i class="et-line icon-profile-male"></i>
                   </div>
-                  <h4>User <br> Friendly</h4>
-                  <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consue.</p>
+                  <h4>Database  <br> Management</h4>
+                  <p>Optimized performance,<br>secure design, and <br> ensured data integrity.</p>
                 </div>
               </div>
               <div class="service-hex">
@@ -161,8 +84,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div class="icon">
                     <i class="et-line icon-heart"></i>
                   </div>
-                  <h4>Lovely <br> Animation</h4>
-                  <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consue.</p>
+                  <h4>Performance  <br> Optimization</h4>
+                  <p>Through caching, <br> optimized queries, and <br>scalability tuning.</p>
                 </div>
               </div>
               <div class="service-hex">
@@ -179,8 +102,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div class="icon">
                     <i class="et-line icon-hotairballoon"></i>
                   </div>
-                  <h4>Ready to <br> launch</h4>
-                  <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consue.</p>
+                  <h4>Security</h4>
+                  <p>Expert authentication,<br> authorization, and encryption <br>practices</p>
                 </div>
               </div>
             </div>
@@ -193,9 +116,9 @@ FACEBOOK: https://www.facebook.com/themefisher
       <nav class="page-nav clear">
   <div class="container">
     <div class="flex flex-middle space-between">
-      <span class="prev-page"><a href="about.html" class="link">&larr; Prev Page</a></span>
-      <span class="copyright">Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>.</span>
-      <span class="next-page"><a href="resume.html" class="link">Next Page &rarr;</a></span>
+      <span class="prev-page"><a href="{% url 'app:about' %}" class="link">&larr; Prev Page</a></span>
+      <span class="copyright">Copyright &copy; 2023, Designed &amp; Developed by <a href="https://t.me/abdukulov">@abdukulov</a>.</span>
+      <span class="next-page"><a href="{% url 'app:resume' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
   <!-- /.page-nav -->
@@ -207,16 +130,4 @@ FACEBOOK: https://www.facebook.com/themefisher
 </section> <!-- /.site-wrapper -->
 
 
-<!-- 
-Essential Scripts
-=====================================-->
-<script src="plugins/jquery-2.2.4.min.js"></script>
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
-<script src="plugins/jquery.nicescroll.min.js"></script>
-<script src="plugins/isotope/isotope.pkgd.min.js"></script>
-<script src="plugins/slick/slick.min.js"></script>
-
-<script src="js/script.js"></script>
-
-</body>
-</html>
+{% endblock content %}
