--- a/templates/services.html
+++ b/templates/services.html
@@ -6,7 +6,7 @@
 <section class="site-wrapper">
   <div class="pt-table">
     <div class="pt-tablecell page-services relative">
-      <a href="'{% url 'app:home' %}" class="page-close"><i class="tf-ion-close"></i></a>
+      <a href="{% url 'app:home' %}" class="page-close"><i class="tf-ion-close"></i></a>
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-lg-offset-1 col-lg-10">
