--- a/templates/works.html
+++ b/templates/works.html
@@ -1,84 +1,8 @@
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
+{% extends "base.html" %}
+{% load static %}
 
-<!-- 
-THEME: Phantom - Bootstrap Portfolio Template
-VERSION: 1.0.0
-AUTHOR: Themefisher
 
-HOMEPAGE: https://themefisher.com/products/phantom-best-bootstrap-portfolio-template/
-DEMO: https://demo.themefisher.com/phantom/
-GITHUB: https://github.com/themefisher/Phantom-Bootstrap-Portfolio-Template
-
-WEBSITE: https://themefisher.com
-TWITTER: https://twitter.com/themefisher
-FACEBOOK: https://www.facebook.com/themefisher
--->
-
-<!DOCTYPE html>
-<html lang="zxx">
-<head>
-
-  <!-- ** Basic Page Needs ** -->
-  <meta charset="utf-8">
-  <title>Phantom - Bootstrap Portfolio Template</title>
-
-  <!-- ** Mobile Specific Metas ** -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Portfolio HTML Template">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="Themefisher">
-  <meta name="generator" content="Themefisher Html5 Portfolio Template v1.0">
-
-  <!-- Essential Stylesheets -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sans:400,600,700,800">
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/animate.css">
-  <link rel="stylesheet" href="plugins/slick/slick.css">
-  <link rel="stylesheet" href="plugins/slick/slick-theme.css">
-  <link rel="stylesheet" href="plugins/themefisher-fonts/css/themefisher-fonts.min.css">  
-
-  <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="css/style.css">
-  
-  <!-- Theme Stylesheet -->
-  <link rel="stylesheet" href="#" id="color-changer">
-  
-  <!--Favicon-->
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
-
-</head>
-<body><!-- set class="dark" on body tag for DARK-THEME -->
-
-  <div class="preloader">
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-  </div>
-
-  <div class="preview-wrapper">
-    <div class="switcher-head">
-      <span>Style Switcher</span>
-      <div class="switcher-trigger tf-tools"></div>
-    </div>
-
-    <div class="switcher-body">
-      <h4>Choose Color:</h4>
-      <ul class="color-options list-none">
-        <li class="c0" data-color="red" title="Default">Default</li>
-        <li class="c1" data-color="blue" title="Red">Red</li>
-        <li class="c2" data-color="green" title="Green">Green</li>
-        <li class="c3" data-color="yellow" title="Blue">Blue</li>
-      </ul>
-    </div>
-  </div>
-
+{% block content %}
 <main class="site-wrapper">
   <div class="pt-table">
     <div class="pt-tablecell page-works relative">
@@ -101,74 +25,35 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="col-xs-12">
             <ul class="filter list-inline">
               <li><a href="#" class="active" data-filter="*">All</a></li>
-              <li><a href="#" data-filter=".Photoshop">Photoshop</a></li>
-              <li><a href="#" data-filter=".Illustrator">Illustrator</a></li>
-              <li><a href="#" data-filter=".Indesign">Indesign</a></li>
-              <li><a href="#" data-filter=".Artworks">Artworks</a></li>
+                {% for repo_type in repo_types %}
+              <li><a href="#" data-filter=".{{ repo_type.id }}">{{ repo_type.name }}</a></li>
+                {% endfor %}
             </ul>
           </div>
         </div>
 
         <div class="row isotope-gutter">
-          <div class="col-xs-12 col-sm-6 col-md-4 Photoshop Illustrator">
+            {% for repo in repos %}
+                <a href="{{ repo.repo_url }}"><div class="col-xs-12 col-sm-6 col-md-4 {{ repo.repo_type.id }}">
             <figure class="works-item">
-              <img src="images/works/1.jpg" alt="">
+              <img src="{{ repo.image.url }}" alt="{{ repo.image }}">
               <div class="overlay"></div>
               <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
+                <h4>{{ repo.name }}</h4>
+                <p>{{ repo.repo_type.name }}</p>
               </figcaption>
             </figure>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 Illustrator">
-            <figure class="works-item">
-              <img src="images/works/2.jpg" alt="">
-              <div class="overlay"></div>
-              <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 Indesign Photoshop">
-            <figure class="works-item">
-              <img src="images/works/3.jpg" alt="">
-              <div class="overlay"></div>
-              <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 Artworks Illustrator">
-            <figure class="works-item">
-              <img src="images/works/4.jpg" alt="">
-              <div class="overlay"></div>
-              <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 Photoshop">
-            <figure class="works-item">
-              <img src="images/works/5.jpg" alt="">
-              <div class="overlay"></div>
-              <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
-              </figcaption>
-            </figure>
-          </div>
+          </div></a>
+            {% endfor %}
         </div> <!-- /.row -->
       </div> <!-- /.container -->
 
       <nav class="page-nav clear">
   <div class="container">
     <div class="flex flex-middle space-between">
-      <span class="prev-page"><a href="resume.html" class="link">&larr; Prev Page</a></span>
-      <span class="copyright">Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>.</span>
-      <span class="next-page"><a href="testimonials.html" class="link">Next Page &rarr;</a></span>
+      <span class="prev-page"><a href="{% url 'app:resume' %}" class="link">&larr; Prev Page</a></span>
+      <span class="copyright">Copyright &copy; 2023, Designed &amp; Developed by <a href="https://t.me/abdukulov">@abdukulov</a>.</span>
+      <span class="next-page"><a href="{% url 'app:testimonials' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
   <!-- /.page-nav -->
@@ -178,18 +63,4 @@ FACEBOOK: https://www.facebook.com/themefisher
     </div> <!-- /.pt-tablecell -->
   </div> <!-- /.pt-table -->
 </main> <!-- /.site-wrapper -->
-
-
-<!-- 
-Essential Scripts
-=====================================-->
-<script src="plugins/jquery-2.2.4.min.js"></script>
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
-<script src="plugins/jquery.nicescroll.min.js"></script>
-<script src="plugins/isotope/isotope.pkgd.min.js"></script>
-<script src="plugins/slick/slick.min.js"></script>
-
-<script src="js/script.js"></script>
-
-</body>
-</html>
+{% endblock content %}
