changed by Abdulla

--- a/templates/index.html
+++ b/templates/index.html
@@ -149,12 +149,12 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="{% url 'app:testimonials' %}" class="hex-content">
+                <a href="{% url 'app:team' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
-                      <i class="tf-chat"></i>
+                      <i class="tf-ion-ios-people-outline"></i>
                     </span>
-                    <span class="title">Testimonials</span>
+                    <span class="title">TEAM</span>
                   </span>
                   <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                     xmlns="http://www.w3.org/2000/svg">
