--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -20,7 +20,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-7">
             <div class="page-title">
-              <h2>Abdulla <span class="primary">Abdukulov</span> <span class="title-bg">About</span></h2>
+              <h2>Abdulla <span class="primary">Abdukulov</span> <span class="title-bg">Welcome</span></h2>
               <p>I am a seasoned Backend Developer with extensive experience in developing and maintaining complex systems. Originally from Uzbekistan, I have worked on various projects both as a full-time employee and as a freelance developer.</p>
               <p>With a strong background in RESTful API design and database management, I have a deep understanding of the inner workings of web applications and how to design scalable and efficient systems.
                 My expertise in programming language such as Python allows me to bring new ideas to the table and create innovative solutions to meet the needs of each project.</p>
