--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title text-center">
-              <h2>About <span class="primary">me</span> <span class="title-bg">Name</span></h2>
+              <h2>About <span class="primary">me</span> <span class="title-bg">Me</span></h2>
               <p>I am a professional Backend Developer with over a year of experience in the field. Since 2022, I have worked on more than 5 live projects and have collaborated with over 10 different clients!</p>
             </div>
           </div>
