--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,84 +1,7 @@
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
+{% extends "base.html" %}
+{% load static %}
 
-<!-- 
-THEME: Phantom - Bootstrap Portfolio Template
-VERSION: 1.0.0
-AUTHOR: Themefisher
-
-HOMEPAGE: https://themefisher.com/products/phantom-best-bootstrap-portfolio-template/
-DEMO: https://demo.themefisher.com/phantom/
-GITHUB: https://github.com/themefisher/Phantom-Bootstrap-Portfolio-Template
-
-WEBSITE: https://themefisher.com
-TWITTER: https://twitter.com/themefisher
-FACEBOOK: https://www.facebook.com/themefisher
--->
-
-<!DOCTYPE html>
-<html lang="zxx">
-<head>
-
-  <!-- ** Basic Page Needs ** -->
-  <meta charset="utf-8">
-  <title>Phantom - Bootstrap Portfolio Template</title>
-
-  <!-- ** Mobile Specific Metas ** -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Portfolio HTML Template">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="Themefisher">
-  <meta name="generator" content="Themefisher Html5 Portfolio Template v1.0">
-
-  <!-- Essential Stylesheets -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sans:400,600,700,800">
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/animate.css">
-  <link rel="stylesheet" href="plugins/slick/slick.css">
-  <link rel="stylesheet" href="plugins/slick/slick-theme.css">
-  <link rel="stylesheet" href="plugins/themefisher-fonts/css/themefisher-fonts.min.css">  
-
-  <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="css/style.css">
-  
-  <!-- Theme Stylesheet -->
-  <link rel="stylesheet" href="#" id="color-changer">
-  
-  <!--Favicon-->
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
-
-</head>
-<body><!-- set class="dark" on body tag for DARK-THEME -->
-
-  <div class="preloader">
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-  </div>
-
-  <div class="preview-wrapper">
-    <div class="switcher-head">
-      <span>Style Switcher</span>
-      <div class="switcher-trigger tf-tools"></div>
-    </div>
-
-    <div class="switcher-body">
-      <h4>Choose Color:</h4>
-      <ul class="color-options list-none">
-        <li class="c0" data-color="red" title="Default">Default</li>
-        <li class="c1" data-color="blue" title="Red">Red</li>
-        <li class="c2" data-color="green" title="Green">Green</li>
-        <li class="c3" data-color="yellow" title="Blue">Blue</li>
-      </ul>
-    </div>
-  </div>
-
+{% block content %}
   <main class="site-wrapper">
     <div class="pt-table">
       <div class="pt-tablecell page-contact relative">
@@ -91,8 +14,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
               <div class="page-title text-center">
                 <h2>Get in <span class="primary">touch</span> <span class="title-bg">Contact</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                  laoreet dolore magna aliquam erat volutpat.</p>
+                <p>Feel free to contact me</p>
               </div>
             </div>
           </div> <!-- /.row -->
@@ -106,7 +28,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                   <div class="media-body">
                     <h4>Email</h4>
-                    <p><a href="mailto:my_name@gmail.com">my_name@gmail.com</a></p>
+                    <p><a href="mailto:abduqulovabdulla3108@gmail.com">abduqulovabdulla3108@gmail.com</a></p>
                   </div>
                 </div>
               </div>
@@ -118,7 +40,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                   <div class="media-body">
                     <h4>Phone</h4>
-                    <p><a href="tel:+000-1111-2222">+000-1111-2222</a></p>
+                    <p><a href="tel:+998-99-005-45-04">+998-99-005-45-04</a></p>
                   </div>
                 </div>
               </div>
@@ -129,8 +51,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <i class="tf-mobile"></i>
                   </div>
                   <div class="media-body">
-                    <h4>Skype</h4>
-                    <p><a href="skype:my_name">my_name</a></p>
+                    <h4>Telegram</h4>
+                    <p><a href="https://t.me/abdukulov">abdukulov</a></p>
                   </div>
                 </div>
               </div>
@@ -139,19 +61,19 @@ FACEBOOK: https://www.facebook.com/themefisher
               <ul class="contact-social">
                 <li>
                   <span class="contact-social-hex"></span>
-                  <a href="www.fb.com/themefisher"><i class="tf-ion-social-facebook"></i></a>
+                  <a href="https://instagram.com/abdullaabdukulov?igshid=YmMyMTA2M2Y="><i class="tf-ion-social-instagram"></i></a>
                 </li>
                 <li>
                   <span class="contact-social-hex"></span>
-                  <a href="www.twitter.com/themefisher"><i class="tf-ion-social-twitter"></i></a>
+                  <a href="https://github.com/abdullaabdukulov"><i class="tf-ion-social-github"></i></a>
+                </li>
+                <li>
+                  <span class="contact-social-hex"></span>
+                  <a href="https://www.linkedin.com/in/abdulla-dev/"><i class="tf-ion-social-linkedin"></i></a>
                 </li>
                 <li>
                   <span class="contact-social-hex"></span>
                   <a href="#"><i class="tf-ion-social-google"></i></a>
-                </li>
-                <li>
-                  <span class="contact-social-hex"></span>
-                  <a href="www.dribbble.com/themefisher"><i class="tf-ion-social-dribbble"></i></a>
                 </li>
               </ul>
             </div>
@@ -163,10 +85,11 @@ FACEBOOK: https://www.facebook.com/themefisher
               </div>
 
               <form id="contact-form" class="row contact-form no-gutter" action="#" method="post">
+                                              {% csrf_token %}
                 <div class="col-xs-12 col-sm-6">
                   <div class="input-field name">
                     <span class="input-icon" id="name"><i class="tf-profile-male"></i></span>
-                    <input type="text" class="form-control" placeholder="Enter your name" required>
+                    <input type="text" name="name" class="form-control" placeholder="Enter your name" required>
                   </div>
                 </div> <!-- ./col- -->
                 <div class="col-xs-12 col-sm-6">
@@ -206,8 +129,8 @@ FACEBOOK: https://www.facebook.com/themefisher
         <nav class="page-nav clear">
           <div class="container">
             <div class="flex flex-middle space-between">
-              <span class="prev-page"><a href="testimonials.html" class="link">&larr; Prev Page</a></span>
-              <span class="copyright">Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>.</span>
+              <span class="prev-page"><a href="{% url 'app:team' %}" class="link">&larr; Prev Page</a></span>
+            <span class="copyright">Copyright &copy; 2023, Designed &amp; Developed by <a href="https://t.me/abdukulov">@abdukulov</a>.</span>
             </div>
           </div>
           <!-- /.page-nav -->
@@ -220,16 +143,4 @@ FACEBOOK: https://www.facebook.com/themefisher
   </main> <!-- /.site-wrapper -->
   
 
-<!-- 
-Essential Scripts
-=====================================-->
-<script src="plugins/jquery-2.2.4.min.js"></script>
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
-<script src="plugins/jquery.nicescroll.min.js"></script>
-<script src="plugins/isotope/isotope.pkgd.min.js"></script>
-<script src="plugins/slick/slick.min.js"></script>
-
-<script src="js/script.js"></script>
-
-</body>
-</html>
+{% endblock %}
