--- a/templates/team.html
+++ b/templates/team.html
@@ -40,6 +40,8 @@
                   <p>{{ team.desc }}</p>
                 </div>
               </div></a>
+                {% empty %}
+    There are no similar team yet.
             {% endfor %}
             </div>
           </div>
