--- a/templates/works.html
+++ b/templates/works.html
@@ -43,6 +43,8 @@
               </figcaption>
             </figure>
           </div></a>
+                {% empty %}
+    There are no similar works yet.
             {% endfor %}
         </div> <!-- /.row -->
       </div> <!-- /.container -->
