changed by Abdulla

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
     <div class="pt-table">
       <div class="pt-tablecell page-contact relative">
         <!-- .close -->
-        <a href="./" class="page-close"><i class="tf-ion-close"></i></a>
+        <a href="{% url 'app:home' %}" class="page-close"><i class="tf-ion-close"></i></a>
         <!-- /.close -->
 
         <div class="container">
